--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,7 +9,10 @@
 @import 'sections/footer';
 @import 'sections/arrivals';
 @import 'sections/card';
-
+@import 'sections/plussize';
+@import 'sections/category';
+@import 'sections/sells';
+@import 'sections/instagram';
 
 
 
