--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,6 +13,8 @@
 @import 'sections/category';
 @import 'sections/sells';
 @import 'sections/instagram';
+@import 'sections/breadcrumbs';
+@import 'sections/catalog';
 
 
 
