--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'sections/instagram';
 @import 'sections/breadcrumbs';
 @import 'sections/catalog';
+@import 'sections/filter-color';
 
 
 
