--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -63,6 +63,13 @@ section {
 	border: 1px solid transparent;
 	transition: border-color 0.5s, color 0.5s, background-color 0.5s;
 
+	&--white {
+		background-color: $white;
+		color: rgba($main-color, 0.5);
+		border-color: $grey-2;
+		text-transform: capitalize;
+	}
+
 	&:hover {
 		border-color: $main-color;
 		color: $main-color;
