--- a/app/scss/sections/_filters.scss
+++ b/app/scss/sections/_filters.scss
@@ -5,7 +5,7 @@
 	background-color: $white;
 	border: 1px solid rgba($main-color, 0.2);
 	z-index: 4;
-	bottom: 102px;
+	bottom: 116px;
 	transform: translateX(-500%);
 	opacity: 0;
 	transition: transform 0.5s, opacity 0.8s linear;
@@ -201,15 +201,13 @@
 	background-color: $white;
 	border: 1px solid rgba($main-color, 0.2);
 	bottom: 165px;
-	right: 200px;
-	z-index: 4;
-	transform: translateX(500%);
+	right: 201px;
 	opacity: 0;
-	transition: transform 0.5s, opacity 0.8s linear;
+	transition: opacity 0.5s linear;
 
 	&--active {
 		opacity: 1;
-		transform: translateX(0);
+		z-index: 4;
 	}
 
 	&__list {
