--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -78,3 +78,19 @@ section {
 }
 
 
+.opacity {
+	&::before {
+		content: '';
+		z-index: 15;
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		background-color: rgba(0, 0, 0, 0.15);
+		top: 0;
+	}
+}
+
+.hidden {
+	overflow: hidden;
+}
+
