--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,6 +22,9 @@
 @import 'sections/catalog';
 @import 'sections/filter';
 @import 'sections/cart';
+@import 'sections/product';
+@import 'sections/viewed';
+@import 'sections/recommendations';
 
 
 
